--- a/style.css
+++ b/style.css
@@ -3,8 +3,14 @@ body{
    color: #2a2b2b;
    background-color:#99f5ff;
    background-image: url(balloonphoto.jpg);
-   
+   font-family: cursive
 }
 img{
    width: 400px;
+
+}
+
+div{
+background-color: aqua;
+
 }
